--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <script src="jquery-3.1.1.min.js" charset="utf-8"></script>
     <script src="client.js" charset="utf-8"></script>
-    <link rel="style.css" href="/css/master.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <meta charset="utf-8">
     <title>Weekend 03 Calculator</title>
   </head>
